--- a/backend/index.html
+++ b/backend/index.html
@@ -24,7 +24,26 @@
 
         <button type="submit">Submit Measurements</button>
     </form>
+
     <div id="result"></div>
+
+    <h2>Select Clothing Items</h2>
+    <div id="clothingItems">
+        <!-- Example clothing items -->
+        <div class="clothing-item" data-size="medium">
+            <img src="top.jpg" alt="Stylish Top">
+            <h3>Stylish Top</h3>
+            <p>Size: Medium</p>
+            <button class="view-fit">View Fit</button>
+        </div>
+        <div class="clothing-item" data-size="large">
+            <img src="jeans.jpg" alt="Comfortable Jeans">
+            <h3>Comfortable Jeans</h3>
+            <p>Size: Large</p>
+            <button class="view-fit">View Fit</button>
+        </div>
+        <!-- Add more clothing items as needed -->
+    </div>
 </div>
 <script src="script.js"></script>
 </body>
