Made it so the viewing could be clicked through and not just a long list

--- a/backend/index.html
+++ b/backend/index.html
@@ -28,22 +28,70 @@
     <div id="result"></div>
 
     <h2>Select Clothing Items</h2>
-    <div id="clothingItems">
-        <!-- Example clothing items -->
+    <div id="clothingDisplay">
         <div class="clothing-item" data-size="medium">
-            <img src="top.jpg" alt="Stylish Top">
-            <h3>Stylish Top</h3>
+            <img src="top1.jpg" alt="Stylish Top 1">
+            <h4>Stylish Top 1</h4>
             <p>Size: Medium</p>
             <button class="view-fit">View Fit</button>
         </div>
-        <div class="clothing-item" data-size="large">
-            <img src="jeans.jpg" alt="Comfortable Jeans">
-            <h3>Comfortable Jeans</h3>
+        <div class="clothing-item" data-size="large" style="display: none;">
+            <img src="top2.jpg" alt="Stylish Top 2">
+            <h4>Stylish Top 2</h4>
             <p>Size: Large</p>
             <button class="view-fit">View Fit</button>
         </div>
-        <!-- Add more clothing items as needed -->
+        <div class="clothing-item" data-size="small" style="display: none;">
+            <img src="top3.jpg" alt="Stylish Top 3">
+            <h4>Stylish Top 3</h4>
+            <p>Size: Small</p>
+            <button class="view-fit">View Fit</button>
+        </div>
+        <div class="clothing-item" data-size="medium" style="display: none;">
+            <img src="top4.jpg" alt="Stylish Top 4">
+            <h4>Stylish Top 4</h4>
+            <p>Size: Medium</p>
+            <button class="view-fit">View Fit</button>
+        </div>
+        <div class="clothing-item" data-size="large" style="display: none;">
+            <img src="top5.jpg" alt="Stylish Top 5">
+            <h4>Stylish Top 5</h4>
+            <p>Size: Large</p>
+            <button class="view-fit">View Fit</button>
+        </div>
+        <div class="clothing-item" data-size="medium" style="display: none;">
+            <img src="bottom1.jpg" alt="Comfortable Jeans 1">
+            <h4>Comfortable Jeans 1</h4>
+            <p>Size: Medium</p>
+            <button class="view-fit">View Fit</button>
+        </div>
+        <div class="clothing-item" data-size="large" style="display: none;">
+            <img src="bottom2.jpg" alt="Comfortable Jeans 2">
+            <h4>Comfortable Jeans 2</h4>
+            <p>Size: Large</p>
+            <button class="view-fit">View Fit</button>
+        </div>
+        <div class="clothing-item" data-size="small" style="display: none;">
+            <img src="bottom3.jpg" alt="Comfortable Jeans 3">
+            <h4>Comfortable Jeans 3</h4>
+            <p>Size: Small</p>
+            <button class="view-fit">View Fit</button>
+        </div>
+        <div class="clothing-item" data-size="medium" style="display: none;">
+            <img src="bottom4.jpg" alt="Comfortable Jeans 4">
+            <h4>Comfortable Jeans 4</h4>
+            <p>Size: Medium</p>
+            <button class="view-fit">View Fit</button>
+        </div>
+        <div class="clothing-item" data-size="large" style="display: none;">
+            <img src="bottom5.jpg" alt="Comfortable Jeans 5">
+            <h4>Comfortable Jeans 5</h4>
+            <p>Size: Large</p>
+            <button class="view-fit">View Fit</button>
+        </div>
     </div>
+    <button id="prevButton" style="display: none;">Previous</button>
+    <button id="nextButton">Next</button>
 </div>
 <script src="script.js"></script>
 </body>
